--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,6 +3,7 @@ on:
     push:
         tags:
             - 'v**'
+    workflow_dispatch:
 
 env:
     PLATFORM: "win_amd64"
@@ -17,4 +18,3 @@ jobs:
               with:
                 python-version: $PY_VERSION
             - run: python build.py --platform $PLATFORM
-            
