--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,6 @@ on:
 
 env:
     PLATFORM: "win_amd64"
-    PY_VERSION: "3.10"
 
 jobs:
     build:
@@ -16,5 +15,5 @@ jobs:
             - uses: actions/checkout@v2
             - uses: actions/setup-python@v5
               with:
-                python-version: $PY_VERSION
+                python-version: "3.10"
             - run: python build.py --platform $PLATFORM
