--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,3 +17,4 @@ jobs:
               with:
                 python-version: "3.10"
             - run: python build.py --platform $PLATFORM
+              working-directory: ./app
