--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,5 +16,4 @@ jobs:
             - uses: actions/setup-python@v5
               with:
                 python-version: "3.10"
-            - run: python build.py --platform $PLATFORM
-              working-directory: app
+            - run: "python ${GITHUB_WORKSPACE}/build.py --platform $PLATFORM"
