--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,7 +6,7 @@ on:
     workflow_dispatch:
 
 env:
-    PLATFORM: "win_amd64"
+    PLATFORM: win_amd64
 
 jobs:
     build:
@@ -15,5 +15,5 @@ jobs:
             - uses: actions/checkout@v2
             - uses: actions/setup-python@v5
               with:
-                python-version: "3.10"
+                python-version: '3.10'
             - run: python main.py --platform $PLATFORM
