--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,7 +6,7 @@ on:
     workflow_dispatch:
 
 env:
-    BUILD_PLATFORM: win_amd64
+    build_platform: win_amd64
 
 jobs:
     build:
@@ -16,5 +16,5 @@ jobs:
             - uses: actions/setup-python@v5
               with:
                 python-version: '3.10'
-            - run: echo "Building platform $BUILD_PLATFORM"
-            - run: python main.py --platform $BUILD_PLATFORM
+            - run: echo "Building platform $build_platform"
+            - run: python main.py --platform $build_platform
