--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,9 +5,6 @@ on:
             - 'v**'
     workflow_dispatch:
 
-env:
-    build_platform: win_amd64
-
 jobs:
     build:
         runs-on: windows-latest
@@ -16,5 +13,5 @@ jobs:
             - uses: actions/setup-python@v5
               with:
                 python-version: '3.10'
-            - run: echo "Building platform $build_platform"
-            - run: python main.py --platform $build_platform
+            - run: python main.py --platform win_amd64
+              name: Building wheel for windows platform
