--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,7 +3,6 @@ on:
     push:
         tags:
             - 'v**'
-    workflow_dispatch:
 
 jobs:
     build:
@@ -15,3 +14,6 @@ jobs:
                 python-version: '3.10'
             - run: python main.py --platform win_amd64
               name: Building wheel for windows platform
+            - uses: softprops/action-gh-release@v2
+              with:
+                files: wheelhouse.zip
