--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,8 +12,8 @@ jobs:
             - uses: actions/setup-python@v5
               with:
                 python-version: '3.10'
-            - run: python main.py --platform win_amd64 --wheelhouse wheelhouse-win_amd64
+            - run: python main.py --platform win_amd64 --wheelhouse nlp_wheelhouse-win_amd64
               name: Building wheel for windows platform
             - uses: softprops/action-gh-release@v2
               with:
-                files: wheelhouse-win_amd64.zip
+                files: nlp_wheelhouse-win_amd64.zip
