--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,11 +9,16 @@ jobs:
         runs-on: windows-latest
         steps:
             - uses: actions/checkout@v2
+            
             - uses: actions/setup-python@v5
               with:
                 python-version: '3.10'
-            - run: python main.py --platform win_amd64 --wheelhouse nlp_wheelhouse-win_amd64
+            
+            - run: |
+                python main.py --platform win_amd64 --wheelhouse nlp_wheelhouse-win_amd64 \
+                    --requirements nlp_requirements.txt
               name: Building wheel for windows platform
+            
             - uses: softprops/action-gh-release@v2
               with:
                 files: nlp_wheelhouse-win_amd64.zip
