--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,20 +15,19 @@ jobs:
                 python-version: '3.10'
             
             - run: |
-                python -m pip install requests setuptools pytest
-            
-            - run: |
+                python -m pip install requests setuptools
                 python build.py
               name: Building wheel for windows platform
-            
-            - uses: softprops/action-gh-release@v2
-              with:
-                files: nlp_wheelhouse-win_amd64.zip
             
             - run: |
                 python -m pip install --no-index --find-links=nlp_wheelhouse-win_amd64 .\nlp_wheelhouse-win_amd64
               name: Test wheelhouse installation
             
             - run: |
+                python -m pip install pytest
                 pytest tests.py
               name: Run unit tests
+            
+            - uses: softprops/action-gh-release@v2
+              with:
+                files: nlp_wheelhouse-win_amd64.zip
