--- a/.gitignore
+++ b/.gitignore
@@ -161,5 +161,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-nlp_wheelhouse*/
-nlp_wheelhouse*.zip
+*_wheels/
+*_wheels.zip
