--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,23 +15,15 @@ jobs:
                 python-version: '3.10'
             
             - run: |
-                python -m pip install requests setuptools
-                python build.py win_amd64 `
-                    -w .\nlp_wheelhouse-win_amd64 `
-                    -s .\setup.py `
-                    -r .\requirements.txt `
-                    -e https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
-              name: Building wheel for windows platform
-            
-            - run: |
-                python -m pip install --no-index --find-links=nlp_wheelhouse-win_amd64 .\nlp_wheelhouse-win_amd64
-              name: Test wheelhouse installation
+                python -m pip install setuptools
+                python build.py win_amd64 --install
+              name: Building and installing wheels for windows platform
             
             - run: |
                 python -m pip install pytest
-                pytest tests.py
+                python -m pytest tests
               name: Run unit tests
-            
+          
             - uses: softprops/action-gh-release@v2
               with:
-                files: nlp_wheelhouse-win_amd64.zip
+                files: '*_wheels.zip'
